--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile site creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header2-8" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">website making software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header2-8" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -264,7 +264,7 @@
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-4">
-                <div><img src="assets/images/footer-logo.png" class="mbr-contacts__img mbr-contacts__img--left"></div>
+                <div><img src="assets/images/transparent.gif" class="mbr-contacts__img mbr-contacts__img--left"></div>
             </div>
             <div class="col-sm-8">
                 <div class="row">
